# growth-journal

./: .gitignore  README.md  init-instance.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: study-plan.md
.github/workflows/: sync-subtree.yml
duhwan/docs/: 20250618.md  20250619.md  20250623.md  git_subtree.md
jaehyeong/codes/: DNNStudyTest.py  dnn3_train_loop_annotated.py  dnn3_train_with_visualization.py
juyoung/notebooks/: test0620.ipynb
yuiyeong/notebooks/: dl-basic-practice-01.ipynb  dl-basic-practice-02.ipynb
