[project]
name = "growth-journal"
version = "0.1.0"
description = "학습한 내용을 기록하는 프로젝트"
authors = [
    { name = "yuiyeong", email = "joyuiyeong@gmail.com" },
    { name = "duhwan", email = "korea202a@gmail.com" },
    { name = "jaehyeong", email = "whwogud33@naver.com" },
    { name = "jaeyoon", email = "vivalavidaajy@gmail.com" },
    { name = "juyoung", email = "korea.juyoung.na@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pre-commit = "^4.2.0"
pytest = "^8.4.0"


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
